--- a/src/app/views/Secure/login.html
+++ b/src/app/views/Secure/login.html
@@ -1,36 +1,42 @@
 #{extends 'Secure/layout.html' /}
 
-<div id="login">
-	
-	<h1>&{'secure.title'}</h1>
-		
-	#{form @authenticate()}
-		
-		#{if flash.error}
-			<p class="error">
-				${messages.get(flash.error)}
-			</p>
-		#{/if}
-		#{if flash.success}
-			<p class="success">
-				${messages.get(flash.success)}
-			</p>
-		#{/if}
-	
-		<p id="username-field">
-			<label for="username">&{'secure.username'}</label>
-			<input type="text" name="username" id="username" value="${flash.username}" />
-		</p>
-		<p id="password-field">
-			<label for="password">&{'secure.password'}</label>
-			<input type="password" name="password" id="password" value="" />
-		</p>
-		<p id="remember-field">
-			<input type="checkbox" name="remember" id="remember" value="true" ${flash.remember ? 'checked="true"' : ''} />
-			<label for="remember">&{'secure.remember'}</label>
-		</p>
-		<p id="signin-field">
-			<input type="submit" id="signin" value="&{'secure.signin'}" />
-		</p>
-	#{/form}
+<div class="container">
+    <div class="row vertical-offset-100">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div class="row-fluid user-row">
+                        <img src="@{'/public/images/logo.jpg'}" class="img-responsive"/>
+                    </div>
+                </div>
+                <div class="panel-body">
+                
+                    #{form @authenticate()}                    
+                        #{if flash.error}
+                            <p class="error">
+                                ${messages.get(flash.error)}
+                            </p>
+                        #{/if}
+                        #{if flash.success}
+                            <p class="success">
+                                ${messages.get(flash.success)}
+                            </p>
+                        #{/if}
+                        <fieldset>
+                            <label class="panel-login">
+                                <div class="login_result"></div>
+                            </label>
+                            <input type="text" class="form-control" placeholder="&{'secure.username'}" name="username" id="username" value="${flash.username}" >
+                            <input type="password" class="form-control" placeholder="&{'secure.password'}" name="password" id="password" value="">
+                            <input type="checkbox" name="remember" id="remember" value="true" ${flash.remember ? 'checked="true"' : ''} />
+                            <label for="remember">&{'secure.remember'}</label>                            
+                            <br></br>
+                            <input class="btn btn-lg btn-primary btn-block" type="submit" id="login" value="&{'secure.signin'} »">
+                        </fieldset>
+                    #{/form}
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
