--- a/src/app/views/Secure/layout.html
+++ b/src/app/views/Secure/layout.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>&{'application.title'}</title>
+    <link href="@{'/public/images/favicon.png'}" rel="icon" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
         
     <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
