Logo description translation

--- a/src/app/views/Secure/login.html
+++ b/src/app/views/Secure/login.html
@@ -7,6 +7,9 @@
                 <div class="panel-heading">
                     <div class="row-fluid user-row">
                         <img src="@{'/public/images/logo.jpg'}" class="img-responsive"/>
+                        <p class="logo-description">
+                          &{'application.description'}
+                        </p>
                     </div>
                 </div>
                 <div class="panel-body">
