--- a/src/app/views/Secure/layout.html
+++ b/src/app/views/Secure/layout.html
@@ -1,26 +1,25 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>&{'application.title'}</title>
-    <link href="@{'/public/images/favicon.png'}" rel="icon" type="image/png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <head>
+        <meta charset="utf-8">
+        <title>&{'application.title'}</title>
+        <link href="@{'/public/images/favicon.png'}" rel="icon" type="image/png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+            
+        <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
+        <link href="@{'/public/stylesheets/login.css'}" rel="stylesheet" type="text/css">        
         
-    <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
-    <link href="@{'/public/stylesheets/custom.css'}" rel="stylesheet" type="text/css">
+    </head>
     
-</head>
-
-<body>
-    
-    #{doLayout /} 
-    
-    <script src="@{'/public/javascripts/jquery-1.11.1.min.js'}" type="text/javascript"></script>    
-    <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
-    <script src="@{'/public/javascripts/custom.js'}" type="text/javascript"></script>
-    
-</body>
+    <body>
+        
+        #{doLayout /} 
+        
+        <script src="@{'/public/javascripts/jquery-1.11.1.min.js'}" type="text/javascript"></script>    
+        <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
+            
+    </body>
 
 </html>
