--- a/src/app/views/_layout/layout.html
+++ b/src/app/views/_layout/layout.html
@@ -11,6 +11,7 @@
         
         <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
         <link href="@{'/public/stylesheets/main.css'}" rel="stylesheet" type="text/css">
+        <link href="@{'/public/stylesheets/custom.css'}" rel="stylesheet" type="text/css">
     
         <script src="@{'/public/javascripts/jquery-1.11.1.min.js'}" type="text/javascript"></script>    
         <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
