--- a/src/public/stylesheets/main.css
+++ b/src/public/stylesheets/main.css
@@ -119,7 +119,7 @@
 .side-menu .brand-name-wrapper .navbar-brand {
     display: block;
 }
-.side-menu #search {
+/* .side-menu #search {
     position: relative;
     z-index: 1000;
 }
@@ -153,7 +153,7 @@
     border-radius: 0;
     background-color: #f3f3f3;
     padding: 15px 18px;
-}
+} */
 /* Main body section */
 
 .side-body {
@@ -342,12 +342,12 @@
 }
 /* Search */
 
-#search .panel-body .navbar-form {
+/* #search .panel-body .navbar-form {
     border-bottom: 0;
 }
 #search .panel-body .navbar-form .form-group {
     margin: 0;
-}
+} */
 .navbar-header {
     /* this is probably redundant */
     
