CRUD module added

--- a/projects/web/app/views/_layout/body_layout.html
+++ b/projects/web/app/views/_layout/body_layout.html
@@ -96,7 +96,8 @@
                             </div>
                         </div>
                     </li>                     
-                    <li><a href="#"><span class="glyphicon glyphicon-signal"></span> Statistics</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-signal"></span> Statistics</a></li>    
+                    <li><a href="@{adm.PluginController.list}"><span class="glyphicon glyphicon-cloud-upload"></span> Plugins</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
                     
                     <!-- ################################### -->
