--- a/projects/web/app/views/CRUD/list.html
+++ b/projects/web/app/views/CRUD/list.html
@@ -1,14 +1,17 @@
 #{extends 'CRUD/layout.html' /}
 #{set title:messages.get('crud.list.title', type.name) /}
 
-<div class="title-style">  
-    <h1> &{'crud.list.title', type.name} </h1>
-    <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
+
+<div class=row>
+	<div class="col-xs-12 col-sm-12 col-md-12">  
+	    <h1> &{'crud.list.title', type.name} </h1>
+	    <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
+	</div>
 </div>
 
-<div id="crudListSearch">
-    #{crud.search /}
-</div>
+<br>
+
+#{crud.searchAndAdd /}
 
 <div id="crudListTable">
     #{crud.table /}
