--- a/projects/web/public/stylesheets/custom.css
+++ b/projects/web/public/stylesheets/custom.css
@@ -94,6 +94,7 @@
     padding-right: 0 !important;
 }
 
-.title-style {    
-    margin-left: 15px;
+.margin-bottom 
+{
+    margin-bottom: 5px !important;
 }
