--- a/projects/web/app/views/adm/PluginController/list.html
+++ b/projects/web/app/views/adm/PluginController/list.html
@@ -3,10 +3,10 @@
 
 
 <div class=row>
-	<div class="col-xs-12 col-sm-12 col-md-12">  
-	    <h1> &{'crud.list.title', type.name} </h1>
-	    <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
-	</div>
+    <div class="col-xs-12 col-sm-12 col-md-12">  
+        <h1> &{'crud.list.title', type.name} </h1>
+        <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
+    </div>
 </div>
 
 <br>
@@ -17,7 +17,9 @@
 
 <div class=row>
     <div class="col-lg-12">  
-        #{crud.table /}
+        <div id="crudListTable">
+            #{crud.table fields: ['id', 'url', 'name'] /}
+        </div>    
     </div>
 </div>
 
