--- a/projects/web/app/views/tags/crud/pagination.html
+++ b/projects/web/app/views/tags/crud/pagination.html
@@ -1,62 +1,80 @@
-%{ nbPages = _caller.count.page(controllers.CRUD.getPageSize()) }%
 
-<p class="crudCount">
-    &{'crud.list.size', _caller.count, _caller.type.name}
-</p>
+    
+<div class=row>
+    <div class="col-lg-12">  
+        <div id="crudListPagination">
+            <p>
+                &{'crud.list.size', _caller.count}
+            </p>
+
+%{
+    nbPages = _caller.count.page(_caller.customPageSize ?: controllers.CRUD.getPageSize())
+}%
 
 #{if nbPages > 1}
-    <p class="crudPages">
-
-        %{
-            limit = (_limit != null ? _limit : 10)
-            start = _caller.page - (int)(limit/2) + (limit % 2 ? 0 : 1)
-            end = _caller.page + (int)(limit/2)
-
-            if(start < 1){
-                extra = 1 - start
-                end = (end + extra < nbPages ? end + extra : nbPages)
-                start = 1
-            }else if(end > nbPages){
-                extra = end - nbPages
-                start = (start - extra > 1 ? start - extra : 1)
-                end = nbPages
-            }
-        }%
-
-        #{if _caller.page > 1}
-            <span class="previous">
-                #{a @list().add('page', _caller.page-1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}&{'crud.pagination.previous'}#{/a}
-            </span>
+    %{
+        limit = (_limit != null ? _limit : 10)
+        start = _caller.page - (int)(limit/2) + (limit % 2 ? 0 : 1)
+        end = _caller.page + (int)(limit/2)
+    
+        if(start < 1){
+            extra = 1 - start
+            end = (end + extra < nbPages ? end + extra : nbPages)
+            start = 1
+        }else if(end > nbPages){
+            extra = end - nbPages
+            start = (start - extra > 1 ? start - extra : 1)
+            end = nbPages
+        }
+    }%
+    #{set url: @list().add('searchFields', _caller.params.get('searchFields')) /}
+    #{list items:_addFields, as :'item'}
+        #{set value: _caller.params.get(item) /}
+        #{if value}
+            #{set url: url.add(item, value)/}
         #{/if}
-
-        #{if start > 1}
-            <span class="first">
-                #{a @list().add('page', 1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}&{'crud.pagination.first'}#{/a}
-            </span>
-        #{/if}
-
-        %{ for (i in start..end) { }%
-            <span class="page">
-                #{if _caller.page == i}
-                    <strong>${i}</strong>
+    #{/list}    
+            <ul class="pagination pull-right">
+                #{if _caller.page != start}
+                    <li class="${ (_caller.page > start) ? '' : 'disabled' }">
+                        #{a url.add('page', 1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}«#{/a}
+                    </li>
+                    <li class="${ _caller.page > 1 ? '' : 'disabled' }">
+                        #{a url.add('page', _caller.page-1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}‹#{/a}
+                    </li>
                 #{/if}
-                #{else}
-                    #{a @list().add('page', i).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}${i}#{/a}
-                #{/else}
-            </span>
-        %{ } }%
-
-        #{if end < nbPages}
-            <span class="last">
-                #{a @list().add('page', nbPages).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}&{'crud.pagination.last'}#{/a}
-            </span>
-        #{/if}
-
-        #{if _caller.page < nbPages}
-            <span class="next">
-                #{a @list().add('page', _caller.page+1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}&{'crud.pagination.next'}#{/a}
-            </span>
-        #{/if}
-
-    </p>
+                %{ for (i in start..end) { }%
+                    #{if _caller.page == i}
+                        <li class="active">
+                            <a href="#">${_caller.page}</a>
+                        </li>
+                    #{/if}
+                    #{else}
+                        <li>
+                            #{a url.add('page', i).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}${i}#{/a}   
+                        </li>
+                    #{/else}
+                %{ } }%
+                #{if _caller.page != end}
+                    <li class="${ _caller.page < nbPages ? '' : 'disabled' }">     
+                        #{a url.add('page', _caller.page+1).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}›#{/a}
+                    </li>
+                    <li class="${ _caller.page < end ? '' : 'disabled' }">
+                        #{a url.add('page', nbPages).add('search', _caller.params.search).add('orderBy', _caller.orderBy).add('order', _caller.order)}»#{/a}
+                    </li>
+                #{/if}
+            </ul>
+    
+    
 #{/if}
+
+        </div>
+    </div>
+</div>    
+
+
+
+
+
+
+
