--- a/projects/web/app/views/CRUD/blank.html
+++ b/projects/web/app/views/CRUD/blank.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">  
         <h1> &{'crud.blank.title', type.modelName} </h1>
-        <pre> &{'crud.blank.title.desc', type.name+'.desc'} </pre>
+        <pre> &{'crud.blank.title.desc', type.modelName+'.desc'} </pre>
     </div>
 </div>
 
