--- a/projects/web/app/views/tags/crud/relationField.html
+++ b/projects/web/app/views/tags/crud/relationField.html
@@ -37,34 +37,34 @@
             </div>
         #{/if}
         #{else}
-            <label for="${field.id}">
-                &{field.name}
-            </label>
-            
-            <select id="${field.id}" name="${pName}" class="selectit selectblock">
-                #{ifnot _field.required}
-                    <option value="">&{'crud.none'}</option>
-                #{/ifnot}
-                #{else}
-                    <option value="">&{'crud.selectValue'}</option>
-                #{/else}
-                %{ _field.choices.each() { }%
-                %{
-                    selected = false
-                    if(field.error?.message != 'validation.required') {
-                        if(params[pName]) {
-                            selected = (it._key().toString() == params[pName])
-                        } else {
-                            selected = it._key() == _value?._key()
+            <label for="${field.id}">&{field.name}</label>
+            <div class="nav-container">
+                <select class="form-control nav" id="${field.id}" name="${field.name}">
+                    #{ifnot _field.required}
+                        <option value="">&{'crud.none'}</option>
+                    #{/ifnot}
+                    #{else}
+                        <option value="">&{'crud.selectValue'}</option>
+                    #{/else}
+                    %{ _field.choices.each() { }%
+                    %{
+                        selected = false
+                        if(field.error?.message != 'validation.required') {
+                            if(params[pName]) {
+                                selected = (it._key().toString() == params[pName])
+                            } else {
+                                selected = it._key() == _value?._key()
+                            }
                         }
-                    }
-                }%
-                <option value="${it._key()}" ${selected ? 'selected="true"'.raw() : ''}>${it}</option>
-                %{ } }%
-            </select>
+                    }%
+                    <option value="${it._key()}" ${selected ? 'selected="true"'.raw() : ''}>${it}</option>
+                    %{ } }%
+                </select>
+            </div>
         #{/else}
         #{ifError field.name}
             <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
         #{/ifError}
     </div>
 #{/field}
+
