--- a/projects/web/app/views/CRUD/blank.html
+++ b/projects/web/app/views/CRUD/blank.html
@@ -16,7 +16,7 @@
 #{form action:@create(), enctype:'multipart/form-data'}
     #{crud.form /}
     
-    <div class="text-center">
+    <div class="btn-row text-center">
         <button class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save">&{'crud.save'}</button>
         <button class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue">&{'crud.saveAndContinue'}</button>
         <button class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndAddAnother">&{'crud.saveAndAddAnother'}</button>
