--- a/projects/web/app/views/_layout/body_layout.html
+++ b/projects/web/app/views/_layout/body_layout.html
@@ -5,6 +5,7 @@
     <!-- uncomment code for absolute positioning tweek see top comment in css -->
     <!-- <div class="absolute-wrapper"> </div> -->
     <!-- Menu -->
+<header>
     <div class="side-menu">
         <nav class="navbar navbar-default" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -144,11 +145,12 @@
             <!-- /.navbar-collapse -->
         </nav>
     </div>
-    
-    <!-- Main Content -->
-    <div class="container-fluid">
-        
-    #{doLayout /}    
-    
-    </div>
+</header>  
+
+    <section>
+        <!-- Main Content -->
+        <div class="container-fluid">
+            #{doLayout /}    
+        </div>
+    </section>  
 </div>
