--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -9,11 +9,12 @@
         <link href="@{'/public/images/favicon.png'}" rel="icon" type="image/png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
-        <link href="@{'/public/stylesheets/main.css'}" rel="stylesheet" type="text/css">
-        <link href="@{'/public/stylesheets/custom.css'}" rel="stylesheet" type="text/css">        
-        <link href="@{'/public/assets/icheck-1.0.2/skins/square/blue.css'}" rel="stylesheet">
-        
+        <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/bootstrap.min.css'}">
+        <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/main.css'}">
+        <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/custom.css'}">        
+        <link rel="stylesheet" type="text/css" href="@{'/public/assets/icheck-1.0.2/skins/square/blue.css'}" >
+        <link rel="stylesheet" type="text/css" href="@{'/public/assets/datetimepicker/bootstrap-datetimepicker.min.css'}">
+        <link rel="stylesheet" type="text/css" href="@{'/public/assets/entypo/entypo-icon.css'}"/>
         #{get 'moreStyles' /}
         
     </head>
@@ -22,34 +23,57 @@
         
         #{doLayout /}     
     
-        <script src="@{'/public/javascripts/jquery-3.2.1.min.js'}" type="text/javascript"></script>    
-        <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
-        <script src="@{'/public/assets/icheck-1.0.2/icheck.js'}"></script>
-        <script src="@{'/public/javascripts/main.js'}" type="text/javascript"></script>
-        <script>
-        $(document).ready(function(){
-          $('input').iCheck({
-            checkboxClass: 'icheckbox_square-blue',
-            radioClass: 'iradio_square-blue',
-            increaseArea: '20%' // optional
-          });
-
-            $(document).on('change','select.nav',function(){
-                var $this = this;
-                var target = $this.value;
-                $('div.select-pane').hide();
-                $('div[id="'+target+'"]').show();
-            })
-            
-            $(document).on('click','.series-select',function(){
-                var $this = this;
-                var txt = $this.text+'<span class="caret"></span>';
-                $($this).closest('li.dropdown').find('a.dropdown-toggle').html(txt);            
-            })
-        });
+        <script type="text/javascript" src="@{'/public/javascripts/jquery-2.2.2.min.js'}"></script>    
+        <script type="text/javascript" src="@{'/public/javascripts/bootstrap.min.js'}"></script>
+        <script type="text/javascript" src="@{'/public/assets/icheck-1.0.2/icheck.js'}"></script>
+        <script type="text/javascript" src="@{'/public/assets/moment/moment-with-locales.js'}"></script>
+        <script type="text/javascript" src="@{'/public/assets/datetimepicker/bootstrap-datetimepicker.min.js'}"></script>
+        <script type="text/javascript" src="@{'/public/javascripts/shared-library.js'}"></script>
+        <script type="text/javascript">
+            SharedLibrary.setLang("${lang}");
+            var datetimepickerTooltipsMap = {
+                    'today':        "&{'datetimepicker.tooltip.today'}",
+                    'clear':        "&{'datetimepicker.tooltip.clear'}",
+                    'close':        "&{'datetimepicker.tooltip.close'}",
+                    'selectMonth':  "&{'datetimepicker.tooltip.select.month'}",
+                    'prevMonth':    "&{'datetimepicker.tooltip.previous.month'}",
+                    'nextMonth':    "&{'datetimepicker.tooltip.next.month'}",
+                    'selectYear':   "&{'datetimepicker.tooltip.select.year'}",
+                    'prevYear':     "&{'datetimepicker.tooltip.previous.year'}",
+                    'nextYear':     "&{'datetimepicker.tooltip.next.year'}",
+                    'selectDecade': "&{'datetimepicker.tooltip.select.decade'}",
+                    'prevDecade':   "&{'datetimepicker.tooltip.previous.decade'}",
+                    'nextDecade':   "&{'datetimepicker.tooltip.next.decade'}",
+                    'prevCentury':  "&{'datetimepicker.tooltip.previous.century'}",
+                    'nextCentury':  "&{'datetimepicker.tooltip.next.century'}"
+            };
         </script>
+        <script src="@{'/public/javascripts/main.js'}" type="text/javascript"></script>
+        
+        <script>
+            $(document).ready(function(){
+                $('input').iCheck({
+                checkboxClass: 'icheckbox_square-blue',
+                radioClass: 'iradio_square-blue',
+                increaseArea: '20%' // optional
+                });
+    
+                $(document).on('change','select.nav',function(){
+                    var $this = this;
+                    var target = $this.value;
+                    $('div.select-pane').hide();
+                    $('div[id="'+target+'"]').show();
+                });
+                
+                $(document).on('click','.series-select',function(){
+                    var $this = this;
+                    var txt = $this.text+'<span class="caret"></span>';
+                    $($this).closest('li.dropdown').find('a.dropdown-toggle').html(txt);            
+                });
+            });
+        </script>
+        
         #{get 'moreScripts' /}
         
     </body>
-    
 </html>
