--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -29,29 +29,11 @@
         <script type="text/javascript" src="@{'/public/assets/moment/moment-with-locales.js'}"></script>
         <script type="text/javascript" src="@{'/public/assets/datetimepicker/bootstrap-datetimepicker.min.js'}"></script>
         <script type="text/javascript" src="@{'/public/javascripts/shared-library.js'}"></script>
-        <script type="text/javascript">
-            SharedLibrary.setLang("${lang}");
-            var datetimepickerTooltipsMap = {
-                    'today':        "&{'datetimepicker.tooltip.today'}",
-                    'clear':        "&{'datetimepicker.tooltip.clear'}",
-                    'close':        "&{'datetimepicker.tooltip.close'}",
-                    'selectMonth':  "&{'datetimepicker.tooltip.select.month'}",
-                    'prevMonth':    "&{'datetimepicker.tooltip.previous.month'}",
-                    'nextMonth':    "&{'datetimepicker.tooltip.next.month'}",
-                    'selectYear':   "&{'datetimepicker.tooltip.select.year'}",
-                    'prevYear':     "&{'datetimepicker.tooltip.previous.year'}",
-                    'nextYear':     "&{'datetimepicker.tooltip.next.year'}",
-                    'selectDecade': "&{'datetimepicker.tooltip.select.decade'}",
-                    'prevDecade':   "&{'datetimepicker.tooltip.previous.decade'}",
-                    'nextDecade':   "&{'datetimepicker.tooltip.next.decade'}",
-                    'prevCentury':  "&{'datetimepicker.tooltip.previous.century'}",
-                    'nextCentury':  "&{'datetimepicker.tooltip.next.century'}"
-            };
-        </script>
-        <script src="@{'/public/javascripts/main.js'}" type="text/javascript"></script>
+        <script type="text/javascript" src="@{'/public/javascripts/main.js'}"></script>
         
-        <script>
-            $(document).ready(function(){
+        // Custom checkboxes
+        <script type="text/javascript">
+            $(function () {
                 $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
@@ -71,6 +53,63 @@
                     $($this).closest('li.dropdown').find('a.dropdown-toggle').html(txt);            
                 });
             });
+        </script>
+        
+        // Date picker
+        <script type="text/javascript">
+            SharedLibrary.setLang("${lang}");
+            var datetimepickerTooltipsMap = {
+                    'today':        "&{'datetimepicker.tooltip.today'}",
+                    'clear':        "&{'datetimepicker.tooltip.clear'}",
+                    'close':        "&{'datetimepicker.tooltip.close'}",
+                    'selectMonth':  "&{'datetimepicker.tooltip.select.month'}",
+                    'prevMonth':    "&{'datetimepicker.tooltip.previous.month'}",
+                    'nextMonth':    "&{'datetimepicker.tooltip.next.month'}",
+                    'selectYear':   "&{'datetimepicker.tooltip.select.year'}",
+                    'prevYear':     "&{'datetimepicker.tooltip.previous.year'}",
+                    'nextYear':     "&{'datetimepicker.tooltip.next.year'}",
+                    'selectDecade': "&{'datetimepicker.tooltip.select.decade'}",
+                    'prevDecade':   "&{'datetimepicker.tooltip.previous.decade'}",
+                    'nextDecade':   "&{'datetimepicker.tooltip.next.decade'}",
+                    'prevCentury':  "&{'datetimepicker.tooltip.previous.century'}",
+                    'nextCentury':  "&{'datetimepicker.tooltip.next.century'}"
+            };
+            
+            $(function () {
+                $('.navbar-toggle').click(function () {
+                    $('.navbar-nav').toggleClass('slide-in');
+                    $('.side-body').toggleClass('body-slide-in');
+                });
+
+                // Bind all datetimepicker elements if they exist.
+                if ($('[class^=datetimepicker-]').length > 0) {
+                    $('.datetimepicker-date').datetimepicker({
+                        locale : SharedLibrary.getLang()
+                        ,format : '${play.libs.I18N.getDateFormat().toUpperCase()}'
+                        ,useCurrent : true
+                        ,showTodayButton: false
+                        ,showClear: true
+                        ,tooltips: {
+                            today: datetimepickerTooltipsMap['today'],
+                            clear: datetimepickerTooltipsMap['clear'],
+                            close: datetimepickerTooltipsMap['close'],
+                            selectMonth: datetimepickerTooltipsMap['selectMonth'],
+                            prevMonth: datetimepickerTooltipsMap['prevMonth'],
+                            nextMonth: datetimepickerTooltipsMap['nextMonth'],
+                            selectYear: datetimepickerTooltipsMap['selectYear'],
+                            prevYear: datetimepickerTooltipsMap['prevYear'],
+                            nextYear: datetimepickerTooltipsMap['nextYear'],
+                            selectDecade: datetimepickerTooltipsMap['selectDecade'],
+                            prevDecade: datetimepickerTooltipsMap['prevDecade'],
+                            nextDecade: datetimepickerTooltipsMap['nextDecade'],
+                            prevCentury: datetimepickerTooltipsMap['prevCentury'],
+                            nextCentury: datetimepickerTooltipsMap['nextCentury']
+                        }
+                    });
+                }
+            });
+            
+            
         </script>
         
         #{get 'moreScripts' /}
