--- a/projects/web/app/views/CRUD/blank.html
+++ b/projects/web/app/views/CRUD/blank.html
@@ -1,12 +1,12 @@
 
 #{extends 'CRUD/layout.html' /}
-#{set title:messages.get('crud.list.title', type.name) /}
+#{set title:messages.get('crud.blank.title', type.modelName) /}
 
 
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">  
         <h1> &{'crud.blank.title', type.modelName} </h1>
-        <pre> &{'crud.blank.title.desc', type.modelName+'.desc'} </pre>
+        <pre> &{'crud.blank.title.desc', type.modelName} </pre>
     </div>
 </div>
 
@@ -14,6 +14,7 @@
 
 <div class="row col-lg-12" >
 #{form action:@create(), enctype:'multipart/form-data'}
+
     #{crud.form /}
     
     <div class="btn-row text-center">
