--- a/projects/web/app/views/CRUD/show.html
+++ b/projects/web/app/views/CRUD/show.html
@@ -1,24 +1,26 @@
+
 #{extends 'CRUD/layout.html' /}
 #{set title:messages.get('crud.show.title', type.modelName) /}
 
-<div id="crudShow" class="${type.name}">
 
-    <h2 id="crudShowTitle">&{'crud.show.title', type.modelName}</h2>
-
-    <div class="objectForm">
-    #{form action:@save(object._key()), enctype:'multipart/form-data'}
-        #{crud.form /}
-        <p class="crudButtons">
-            <input type="submit" name="_save" value="&{'crud.save', type.modelName}" />
-            <input type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
-        </p>
-    #{/form}
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12">  
+        <h1> &{'crud.show.title', type.modelName} </h1>
+        <pre> &{'crud.show.title.desc', type.modelName} </pre>
     </div>
+</div>
 
-    #{form @delete(object._key())}
-        <p class="crudDelete">
-            <input type="submit" value="&{'crud.delete', type.modelName}" />
-        </p>
-    #{/form}
+<br>
 
+<div class="row col-lg-12" >
+#{form action:@save(object._key()), enctype:'multipart/form-data'}
+
+    #{crud.form /}
+    
+    <div class="btn-row text-center">        
+        <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save" value="&{'crud.save', type.modelName}" />
+        <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
+        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+    </div>
+#{/form}
 </div>
