--- a/projects/web/app/views/tags/crud/fileField.html
+++ b/projects/web/app/views/tags/crud/fileField.html
@@ -1,14 +1,28 @@
 #{field 'object.' + _name}    
     <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
-        <label for="${field.id}">&{field.name}</label>         
+        <label for="${field.id}">&{field.name}</label>   
         <div class="input-group file-input">
             <input id="${field.id}_fileName" type="text" class="form-control" disabled="disabled">            
+                #{if _value && _value.exists() && _id}
+                    <span class="input-group-btn" id="download_attachment">
+                        <div class="btn btn-default" style="border-radius: 0px;">
+                            <span class="glyphicon glyphicon-download-alt">
+                                
+                            </span>
+                        </div>
+                    </span>
+                    <span class="input-group-btn " id="delete_attachment">
+                        <div class="btn btn-default" style="border-radius: 0px;">
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="removeAttachment"></span>
+                        </div>
+                    </span>
+                #{/if}
             <span class="input-group-btn ">
                 <div class="btn btn-default">
                     <span class="glyphicon glyphicon-folder-open"></span>
-                    <span>Browse</span>
-                    <input id="${field.id}" type="file" name="${field.name}" 
-                        onchange="javascript: setFileName(this, document.getElementById('${field.id}_fileName'));"/> 
+                    <span class="input-file-text">&{'browse'}</span>
+                    <input id="${field.id}" type="file" name="${field.name}" style="width: 100px;" onchange="javascript: setFileName(this, document.getElementById('${field.id}_fileName'));"/> 
                 </div>
             </span>
         </div>        
@@ -17,9 +31,23 @@
             <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
         #{/ifError} 
     </div>
-
-    #{if _value && _value.exists() && _id}
-        <a class="currentAttachment" href="@{attachment(_id, _name)}">Download current file (${_value.length().formatSize()})</a>
-        <span class="removeAttachment"><input type="checkbox" name="${field.name}_delete_" value="true" /> (delete)</span>
-    #{/if}
 #{/field}
+
+
+<input id="${field.id}_delete_" type="hidden" name="${field.name}_delete_" value="true" />
+<a id="attachment_link" class="currentAttachment" href="@{attachment(_id, _name)}">...</a>
+
+#{set 'moreInnerScripts' }
+<script type="text/javascript">
+    $(function () {
+        	$('#download_attachment').on('click',function(){
+        	    console.log('download_attachment');
+        	    //window.location.href = '@{attachment(_id, _name)}';
+        });
+        	
+        $('#delete_attachment').on('click',function(){
+            console.log('delete_attachment');
+        });
+    });
+</script>
+#{/set}
